Put http/https/ftp support in XmlUrlResolver behind a feature switch
App that references XmlReader will always pull in a reference to XmlUrlResolver, because it's the default value in XmlReaderSettings. Networking stack that comes with it is huge.

--- a/src/System.Private.Xml/src/System.Private.Xml.csproj
+++ b/src/System.Private.Xml/src/System.Private.Xml.csproj
@@ -20,6 +20,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'uapaot-Windows_NT-Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'uapaot-Windows_NT-Release|AnyCPU'" />
   <ItemGroup>
+    <Compile Include="$(CommonPath)\System\Runtime\CompilerServices\RemovableAttribute.cs">
+      <Link>System\Runtime\CompilerServices\RemovableAttribute</Link>
+    </Compile>
+    <Compile Include="$(CommonPath)\System\Runtime\CompilerServices\CodeRemovedException.cs">
+      <Link>System\Runtime\CompilerServices\CodeRemovedException.cs</Link>
+    </Compile>
     <Compile Include="$(CommonPath)\System\IO\StringBuilderCache.cs">
       <Link>System\StringBuilderCache.cs</Link>
     </Compile>
